; ModuleID = '/home/carl/AnghaBench/git/extr_apply.c_parse_mode_line.c'
source_filename = "/home/carl/AnghaBench/git/extr_apply.c_parse_mode_line.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [28 x i8] c"invalid mode on line %d: %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, i32*)* @parse_mode_line to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_mode_line(i8* %0, i32 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32* %2, i32** %7, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = call i32 @strtoul(i8* %9, i8** %8, i32 8)
  %11 = load i32*, i32** %7, align 8
  store i32 %10, i32* %11, align 4
  %12 = load i8*, i8** %8, align 8
  %13 = load i8*, i8** %5, align 8
  %14 = icmp eq i8* %12, %13
  br i1 %14, label %20, label %15

15:                                               ; preds = %3
  %16 = load i8*, i8** %8, align 8
  %17 = load i8, i8* %16, align 1
  %18 = call i32 @isspace(i8 signext %17)
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %25, label %20

20:                                               ; preds = %15, %3
  %21 = call i32 @_(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0))
  %22 = load i32, i32* %6, align 4
  %23 = load i8*, i8** %5, align 8
  %24 = call i32 @error(i32 %21, i32 %22, i8* %23)
  store i32 %24, i32* %4, align 4
  br label %26

25:                                               ; preds = %15
  store i32 0, i32* %4, align 4
  br label %26

26:                                               ; preds = %25, %20
  %27 = load i32, i32* %4, align 4
  ret i32 %27
}

declare dso_local i32 @strtoul(i8*, i8**, i32) #1

declare dso_local i32 @isspace(i8 signext) #1

declare dso_local i32 @error(i32, i32, i8*) #1

declare dso_local i32 @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
